2009-04-06  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Rubber-stamped by Sam Weinig.

        https://bugs.webkit.org/show_bug.cgi?id=20575
        No localization in WebKitGtk

        * platform/gtk/FileChooserGtk.cpp: Remove usage of glib/gi18n.h,
        since there are not translatable strings.
        * platform/gtk/LocalizedStringsGtk.cpp: Use the glib i18n header
        that is specific for libraries.

2009-04-06  Mike Belshe  <mike@belshe.com>

        Reviewed by Dimitri Glazkov.

        https://bugs.webkit.org/show_bug.cgi?id=24978
        Use custom implementations of a few Node methods so that
        we don't over-aggressively create JS wrappers here.

        * bindings/v8/custom/V8NodeCustom.cpp: Added custom implementations.
        * dom/Node.idl: Removed JSC-specifier, making impl custom for V8 as well.

2009-04-06  Dave Moore  <davemoore@google.com>

        Reviewed by Dimitri Glazkov.

        https://bugs.webkit.org/show_bug.cgi?id=25031
        Make the V8 element collections check for named properties *before*
        checking if there are any elements with the same name. Otherwise
        it is both incorrect and slow.

        Test: fast/dom/HTMLSelectElement/length-not-overridden.html

        Both of these interceptors were attempting to find an element in the
        collection that had a name or id of the property name before checking
        for a JS property with that name.
        * bindings/v8/V8Collection.h:
        (WebCore::collectionNamedPropertyGetter):
        (WebCore::nodeCollectionNamedPropertyGetter):

2009-04-06  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Darin Adler

        https://bugs.webkit.org/show_bug.cgi?id=25052
        
        Pull the call to updateGraphicsLayerGeometry() out of updateGraphicsLayers(),
        because we need to call it at the end of rebuildCompositingLayerTree() once
        we've determined which descendant layers are composited, otherwise